--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="description" content="一套高质量的微信小程序 UI 组件库。">
     <title>iView Aliapp - 一套高质量的支付宝小程序 UI 组件库</title>
     <link rel="shortcut icon" href="https://file.iviewui.com/file/favicon.ico">
-    <link rel="stylesheet" href="/iview-alipay-docs/main.f19aca23021742291824.css">
+    <link rel="stylesheet" href="/iview-alipay-docs/dist/main.e5c9cbd105b86e15594f.css">
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/iview-alipay-docs/vendors.f19aca23021742291824.js"></script>
-    <script type="text/javascript" src="/iview-alipay-docs/main.f19aca23021742291824.js"></script>
+    <script type="text/javascript" src="/iview-alipay-docs/dist/vendors.e5c9cbd105b86e15594f.js"></script>
+    <script type="text/javascript" src="/iview-alipay-docs/dist/main.e5c9cbd105b86e15594f.js"></script>
 </body>
 </html>
